Migrating to JDK 21 and Spring 6.1.1
Also updating all dependencies and removing preview features.